[project]
name = "cloudlogin"
version = "0.1.0"
description = "Cloud Login Automation"
requires-python = ">=3.10"
dependencies = [
    "boto3==1.40.1",
    "botocore==1.40.1",
    "typer>=0.16.0"
]

[project.scripts]
cloudlogin = "cloudlogin.cloudlogin:app"

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pyright",
    "ruff",
    "setuptools>=78.1.0",
    "wheel>=0.45.1"
]

[build-system]
requires = [
    "setuptools>=78.1.0",
    "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"
